@@ -15,6 +15,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #5845: In site.py, only load readline history from ~/.python_history
+  if no history has been read already.  This avoids double writes to the
+  history file at shutdown.
+
 - Properly initialize all fields of a SSL object after allocation.
 
 - Issue #19095: SSLSocket.getpeercert() now raises ValueError when the
